# workshop-free-lgalvao

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
data/: planilha_vendas error colunas.xlsx  planilha_vendas error.xlsx  planilha_vendas.xlsx
docs/: index.md
search/: search_index.json
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_app.py  test_unit.py
