[tool.poetry]
name = "workshop-free-lgalvao"
version = "0.1.0"
description = ""
authors = ["LucianoBorba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
selenium = "^4.17.2"
pytest = "^7.4.4"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "lsof -ti :8501 | xargs kill -9 | streamlit run src/app.py"